--- a/roles/common/templates/etc/hosts.j2
+++ b/roles/common/templates/etc/hosts.j2
@@ -1,5 +1,5 @@
 127.0.0.1 localhost
 
 {% for host in groups.all %}
-{{ hostvars[host]['ansible_' + iface]['ipv4']['address'] }} {{ hostvars[host]['ansible_hostname'] }}
+{{ hostvars[host]['ansible_' + iface]['ipv4']['address'] }} {{ hostvars[host]['ansible_hostname'] }} {{ hostvars[host]['ansible_hostname'] }}.{{ domain }}
 {% endfor %}
